Add `react-router-dom` package
Due to the way `npm` solves peer dependencies, we were able to import
`react-router-dom` in the project even when we didn't have it as
dependency. After switching to `pnpm` this bug appeared:

```
Error: Cannot find module 'react-router-dom' imported from
'app/routes/docs.$lang.$ref.tsx'
```

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
